build: Update gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ build-ARM64*
 windows/PhotobookRuntimeComponent/*_g.h
 .DS_Store
 depot_tools
-skia
+/skia
+PB/third-party/windows/skia/x64/Debug
 ninja.exe
 ninja.png
