dev: Add `ImageToPaperService`.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -91,6 +91,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/ImportImageTask.h
     include/pb/ImageMonitor.h
     include/pb/ImportFoldersLogic.h
+    include/pb/ImageToPaperService.h
     include/pb/image/Image.h
     include/pb/image/ImageFactory.h
     include/pb/ImageMetadataLogic.h
@@ -157,6 +158,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     src/ImageMonitor.cpp
     src/ImageOperations.cpp
     src/ImageSetWriter.cpp
+    src/ImageToPaperService.cpp
     src/ImportImageTask.cpp
     src/ImportFoldersLogic.cpp
     src/Jpg.cpp
