--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -80,6 +80,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/CollageManager.h
     include/pb/CollageThumbnailsMakerJob.h
     include/pb/DataManager.h
+    include/pb/DirectoryInspectionJob.h
     include/pb/DrawingService.h
     include/pb/Enums.h
     include/pb/export/ExportLogic.h
@@ -147,6 +148,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     src/CollageManager.cpp
     src/Config.cpp
     src/DataManager.cpp
+    src/DirectoryInspectionJob.cpp
     src/DrawingService.cpp
     src/Enums.cpp
     src/ExportLogic.cpp
