dev: Add `LutIconsPreprocessingJob`.

--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -105,6 +105,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/image/VirtualImage.h
     include/pb/image/TextImage.h
     include/pb/LutService.h
+    include/pb/LutIconsPreprocessingJob.h
     include/pb/MapReducer.h
     include/pb/MetadataReader.h
     include/pb/FileComparator.h
@@ -170,6 +171,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     src/ImportFoldersLogic.cpp
     src/Jpg.cpp
     src/LutService.cpp
+    src/LutIconsPreprocessingJob.cpp
     src/MetadataReader.cpp
     src/PaperSettings.cpp
     src/Pdf.cpp
