--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -54,6 +54,7 @@ find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(inja CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
+find_package(GLEW REQUIRED)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     find_package(podofo CONFIG REQUIRED)
@@ -219,7 +220,8 @@ target_link_libraries(${PBLIB_LIBRARY_NAME} PRIVATE
     nlohmann_json::nlohmann_json
     spdlog::spdlog
     pantor::inja
-    glfw)
+    glfw
+    GLEW::GLEW)
 
 set_target_properties(${PBLIB_LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
@@ -280,7 +282,8 @@ target_link_libraries(${PBLIB_TESTS_LIBRARY_NAME} PRIVATE
     ${PLATFORM_PODOFO}
     ${PLATFORM_SKIA}
     ${PBLIB_LIBRARY_NAME}
-    glfw)
+    glfw
+    GLEW::GLEW)
 
 if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     add_custom_command(TARGET ${PBLIB_TESTS_LIBRARY_NAME} POST_BUILD
