--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -129,6 +129,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     include/pb/project/PaperSettings.h
     include/pb/project/ProjectMetadata.h
     include/pb/project/Project.h
+    include/pb/ProjectManagementSystem.h
     include/pb/ProgressManager.h
     include/pb/RowProcessingData.h
     include/pb/RuntimeUUID.h
@@ -196,6 +197,7 @@ add_library(${PBLIB_LIBRARY_NAME} STATIC
     src/ProgressManager.cpp
     src/Project.cpp
     src/ProjectMetadata.cpp
+    src/ProjectManagementSystem.cpp
     src/PersistenceService.cpp
     src/RegularImage.cpp
     src/RuntimeUUID.cpp
