--- a/PB/CMakeLists.txt
+++ b/PB/CMakeLists.txt
@@ -13,10 +13,9 @@ if (WIN32)
     add_compile_definitions(NOMINMAX)
 else()
     set(CMAKE_CXX_FLAGS "-std=c++20")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexperimental-library")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 endif()
 if (STATIC_CHECK)
     message("Static check ON")
